# vlm-scene-analyser

./: .gitignore  README.md  pyproject.toml
configs/: train_config.yaml
data/: annotations.jsonl  coordinates.csv
data/annotations/: nadir_airport_changi_cargo_1.348_103.974.json  nadir_airport_changi_cargo_1.3762_103.9963.json  nadir_airport_changi_t1_t2_t3_1.3554_103.9885.json  nadir_airport_changi_t3_1.3554_103.9885.json  nadir_airport_changi_t4_1.3411_103.9819.json  nadir_airport_changi_t4_1.341_103.984.json  nadir_airport_paya_lebar_ab_north_1.3687_103.9161.json  nadir_airport_seletar_1.4167_103.8675.json  nadir_cbd_beach_road_1.2979_103.8586.json  nadir_cbd_bugis_1.3_103.8555.json  nadir_cbd_changi_biz_park_1.335_103.9653.json  nadir_cbd_chinatown_1.2837_103.8437.json  nadir_cbd_harbourfront_1.265_103.822.json  nadir_cbd_jalan_besar_1.31_103.857.json  nadir_cbd_kampong_glam_1.3017_103.8594.json  nadir_cbd_mapletree_biz_city_1.269_103.847.json  nadir_cbd_mapletree_biz_city_1.2746_103.799.json  nadir_cbd_marina_bay_1.2814_103.8586.json  nadir_cbd_marina_bay_1.2821_103.8576.json  nadir_cbd_novena_1.32_103.844.json  nadir_cbd_one_north_1.299_103.787.json  nadir_cbd_orchard_1.3048_103.8318.json  nadir_cbd_paya_lebar_central_1.318_103.893.json  nadir_cbd_raffles_place_1.284_103.8514.json  nadir_cbd_robinson_road_1.28_103.849.json  nadir_cbd_suntec_city_1.2945_103.858.json  (+165 more)
notebooks/: 01_dataset_curation.ipynb  02_finetune.ipynb  03_evaluation.ipynb  04_evaluation.ipynb
src/: __init__.py  augmentation.py  collator.py  evaluation.py  inference.py  prompts.py
